# AISEEKHO_HACKTHON

./: .env.example  .gitignore  KhidmatAI_PRD.docx  README.md  SETUP_GUIDE.md  package.json  render.yaml  vercel.json
.github/workflows/: ci.yml  placeholder.json
agents/service_orchestrator/: agent.py
api/: [...path].js  discover.js  health.js  suggestions.js
api/_lib/: edgeAuth.js  edgeRouter.js  geo.js  nlu.js  orchestrateDiscover.js
api/auth/: send-otp.js  verify.js
backend/: .env.example  requirements.txt
backend/app/: main.py  orchestrator.py
backend/data/: orchestrator.db
docs/: API_SETUP.md  CHALLENGE2_CHECKLIST.md  CLERK_OTP_SETUP.md  DEMO_CHECKLIST.md  DEPLOY.md  DESIGN_FRAMER_PROMPT.md  FRAMER_LINK.md  HACKATHON_FORM_ANSWERS.md  KHIDMAT_NOTES.md  STITCH.md  SUBMISSION.md  UI_UX_FLOW.md  UI_UX_REDESIGN_PROMPT.md  USER_FLOW.md  VERCEL_DEPLOY.md  khidmat_prd_extract.txt
khidmat-ai/: README.md  demo.html
khidmat-ai/backend/: .env.example  Dockerfile  pyproject.toml  test_req.py
khidmat-ai/backend/app/: config.py  firebase_init.py  main.py  seed_data.py
khidmat-ai/backend/app/agents/: booking_agent.py  decision_agent.py  discovery_agent.py  followup_agent.py  intent_agent.py  ranking_agent.py
khidmat-ai/backend/app/routers/: orchestrator.py
khidmat-ai/backend/tests/: test_pipeline.py  test_scoring.py
mobile/: .env  App.tsx  app.json  package-lock.json  package.json
scripts/: convert_readme.py  fetch-stitch-project.ps1  fetch-stitch-screen.ps1  package-antigravity-traces.ps1  preview.ps1  smoke-test.ps1  start-web.ps1
(+250 files in other folders)
